// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorAffiliationList renders author with multiple affiliations 1`] = `
<div
  className="__InlineList__ di"
>
  <ul>
    <li
      key="Affiliation1"
    >
      <span>
        Affiliation1
      </span>
       and 
    </li>
    <li
      key="Affiliation2"
    >
      <span>
        Affiliation2
      </span>
    </li>
  </ul>
</div>
`;

exports[`AuthorAffiliationList renders author with one affiliation 1`] = `
<div
  className="__InlineList__ di"
>
  <ul>
    <li
      key="Affiliation"
    >
      <span>
        Affiliation
      </span>
    </li>
  </ul>
</div>
`;
